<resources>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_product">Add product</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="address_line_1">Address (line 1)</string>
    <string name="address_line_2">Address (line 2)</string>
    <string name="app_name">zadanie_06</string>
    <string name="back">BACK</string>
    <string name="cart_title">Cart</string>
    <string name="category">Category</string>
    <string name="category_list_title">Categories</string>
    <string name="checkout">Checkout</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="minus">-</string>
    <string name="my_account">My account</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="new_products_notification_name">New product</string>
    <string name="new_products_notification_description">New product has been added to zad-06 app</string>
    <string name="discount_notification_name">Low prices!</string>
    <string name="discount_notification_description">Very very very low prices here</string>
    <string name="notification_reply_button">Reply</string>
    <string name="orders">Orders</string>
    <string name="pager_label">Pager fragment</string>
    <string name="paid_products">Paid products</string>
    <string name="pay_with_stripe">Pay with Stripe</string>
    <string name="pay_with_payu">Pay with PayU</string>
    <string name="post_code">Post code</string>
    <string name="plus">+</string>
    <string name="previous">Previous</string>
    <string name="price">Price</string>
    <string name="product_details_label">Product detailed view</string>
    <string name="product_list_label">Product list</string>
    <string name="product_list_title">Shop</string>
    <string name="x">X</string>
</resources>