<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/powder">

    <LinearLayout
        android:id="@+id/checkout_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/checkout_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkout_address_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/checkout_heading">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_line_1"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/checkout_address_1_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkout_address_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/checkout_address_1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_line_2"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/checkout_address_2_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkout_post_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/checkout_address_2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_code"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/checkout_post_code_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkout_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/checkout_post_code">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/checkout_city_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkout_button_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/checkout_city">

        <Button
            android:id="@+id/pay_with_stripe_button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/pay_with_stripe"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/pay_with_payu_button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/pay_with_payu"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>